# frabot

./: .gitignore  README.md  config.json  executor.py  pyproject.toml  requirements.txt  setup_browser.sh
frabot/: hooks.py  modules.txt
frabot/config/: desktop.py  docs.py
frabot/frabot/: executor.py
frabot/libraries/: custom_keywords.py  variables.py
frabot/resources/: custom_keywords.robot
libraries/: custom_keywords.py  keyword_utilities.py  variables.py
resources/: custom_keywords.robot
results/: info.txt
tests/: test_script.robot
