[project]
name = "frabot"
authors = [
    { name = "Techfinite Systems ", email = "it-support@techfinite.com "}
]
description = "frabot is a test automation toolkit for Frappe applications, designed to seamlessly integrate Robot Framework for UI and backend testing. It provides a flexible, keyword-driven testing layer to verify core business logic, workflows, and frontend behaviors in development "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
